(feat/ref) Ajuste de relacionamentos de usuarios com roles e perfis e ajuste de filtro para novo padrão