@@ -1,9 +1,13 @@
 package br.com.fiap.rei_dos_piratas.infrastructure.mapper.jpa.usuarios;
 
 import br.com.fiap.rei_dos_piratas.domain.entity.Perfil;
+import br.com.fiap.rei_dos_piratas.domain.entity.Role;
 import br.com.fiap.rei_dos_piratas.infrastructure.entity.usuarios.JpaPerfilEntity;
+import br.com.fiap.rei_dos_piratas.infrastructure.entity.usuarios.JpaRoleEntity;
 
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class JpaPerfilMapper {
 
@@ -18,8 +22,8 @@ public class JpaPerfilMapper {
                 jpaPerfilEntity.getDescricao(),
                 jpaPerfilEntity.getRoles() != null ?
                     jpaPerfilEntity.getRoles().stream()
-                        .map(JpaRoleMapper::toEntityWithoutPerfis)
-                        .toList() :
+                        .map(JpaPerfilMapper::mapRoleWithoutPerfis)
+                        .collect(Collectors.toList()) :
                     Collections.emptyList()
         );
     }
@@ -29,15 +33,18 @@ public class JpaPerfilMapper {
             return null;
         }
 
+        List<JpaRoleEntity> jpaRoles = perfil.getRoles() != null ?
+            perfil.getRoles().stream()
+                .map(JpaPerfilMapper::mapJpaRoleWithoutPerfis)
+                .collect(Collectors.toList()) :
+            Collections.emptyList();
+
         return new JpaPerfilEntity(
                 perfil.getId(),
                 perfil.getNome(),
                 perfil.getDescricao(),
-                perfil.getRoles() != null ?
-                    perfil.getRoles().stream()
-                        .map(JpaRoleMapper::toJpaEntityWithoutPerfis)
-                        .toList() :
-                    Collections.emptyList()
+                jpaRoles,
+                Collections.emptyList() // usuarios - empty list for new entities
         );
     }
 
@@ -63,7 +70,33 @@ public class JpaPerfilMapper {
                 perfil.getId(),
                 perfil.getNome(),
                 perfil.getDescricao(),
+                Collections.emptyList(), // roles - empty list
+                Collections.emptyList()  // usuarios - empty list
+        );
+    }
+
+    // Private helper methods to avoid circular dependency
+    private static Role mapRoleWithoutPerfis(JpaRoleEntity jpaRoleEntity) {
+        if (jpaRoleEntity == null) {
+            return null;
+        }
+        return new Role(
+                jpaRoleEntity.getId(),
+                jpaRoleEntity.getNome(),
+                jpaRoleEntity.getDescricao(),
                 Collections.emptyList()
+        );
+    }
+
+    private static JpaRoleEntity mapJpaRoleWithoutPerfis(Role role) {
+        if (role == null) {
+            return null;
+        }
+        return new JpaRoleEntity(
+                role.getId(),
+                role.getNome(),
+                role.getDescricao(),
+                Collections.emptyList() // perfis - empty list
         );
     }
 
